--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
+    "react-scrollable-anchor": "^0.6.1",
     "redux": "^4.0.1",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0"
