--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://amgi.herokuapp.com/",
   "devDependencies": {
     "react-scripts": "2.0.5",
     "redux-devtools-extension": "^2.13.5"
